@@ -31,7 +31,7 @@
 #define LIBCSOUP_VERSION(x,y,z)	(((x)<<24)|((y)<<12)|(z))
 #define LIBCSOUP_VER_MAJOR	0		/* 0-255 */
 #define LIBCSOUP_VER_MINOR	8		/* 0-4095 */
-#define LIBCSOUP_VER_BUGFIX	12		/* 0-4095 */
+#define LIBCSOUP_VER_BUGFIX	13		/* 0-4095 */
 
 
 /*****************************************************************************
@@ -682,6 +682,7 @@ int smm_signal_break(int (*handle)(int));
 int smm_sleep(int sec, int usec);
 int smm_time_diff(SMM_TIME *tmbuf);
 int smm_time_get_epoch(SMM_TIME *tmbuf);
+char *smm_userpath(char *buffer, int len);
 void *smm_mbstowcs_alloc(char *mbs);
 char *smm_wcstombs_alloc(void *wcs);
 #ifdef __cplusplus
